# serializer version: 1
# name: test_numbers[de-number.keba_keenergy_12345678_buffer_tank_excess_energy_target_temperature_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Pufferspeicher 1 Soll-Temperatur (PV-Überschuss)',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:sun-thermometer',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 95.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_buffer_tank_excess_energy_target_temperature_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '75.0',
  })
# ---
# name: test_numbers[de-number.keba_keenergy_12345678_buffer_tank_excess_energy_target_temperature_2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Pufferspeicher 2 Soll-Temperatur (PV-Überschuss)',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:sun-thermometer',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 95.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_buffer_tank_excess_energy_target_temperature_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '75.0',
  })
# ---
# name: test_numbers[de-number.keba_keenergy_12345678_buffer_tank_excess_energy_target_temperature_hysteresis_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Pufferspeicher 1 Soll-Temperatur-Hysterese (PV-Überschuss)',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer-lines',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 5.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.1,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_buffer_tank_excess_energy_target_temperature_hysteresis_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2.0',
  })
# ---
# name: test_numbers[de-number.keba_keenergy_12345678_buffer_tank_excess_energy_target_temperature_hysteresis_2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Pufferspeicher 2 Soll-Temperatur-Hysterese (PV-Überschuss)',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer-lines',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 5.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.1,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_buffer_tank_excess_energy_target_temperature_hysteresis_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2.0',
  })
# ---
# name: test_numbers[de-number.keba_keenergy_12345678_buffer_tank_outdoor_temperature_excess_energy_limit_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Pufferspeicher 1 Außentemperatur-Grenze (PV-Überschuss)',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 50.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_buffer_tank_outdoor_temperature_excess_energy_limit_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '25.0',
  })
# ---
# name: test_numbers[de-number.keba_keenergy_12345678_buffer_tank_outdoor_temperature_excess_energy_limit_2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Pufferspeicher 2 Außentemperatur-Grenze (PV-Überschuss)',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 50.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_buffer_tank_outdoor_temperature_excess_energy_limit_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '25.0',
  })
# ---
# name: test_numbers[de-number.keba_keenergy_12345678_buffer_tank_standby_temperature_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Pufferspeicher 1 Stütztemperatur',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer-chevron-down',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 90.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_buffer_tank_standby_temperature_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '10.0',
  })
# ---
# name: test_numbers[de-number.keba_keenergy_12345678_buffer_tank_standby_temperature_2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Pufferspeicher 2 Stütztemperatur',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer-chevron-down',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 90.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_buffer_tank_standby_temperature_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '11.0',
  })
# ---
# name: test_numbers[de-number.keba_keenergy_12345678_external_heat_source_min_runtime_excess_energy_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'duration',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Externe Wärmequelle 1 Mindestlaufzeit (PV-Überschuss)',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 10800.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTime.MINUTES: 'min'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_external_heat_source_min_runtime_excess_energy_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '5.0',
  })
# ---
# name: test_numbers[de-number.keba_keenergy_12345678_external_heat_source_min_runtime_excess_energy_2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'duration',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Externe Wärmequelle 2 Mindestlaufzeit (PV-Überschuss)',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 10800.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTime.MINUTES: 'min'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_external_heat_source_min_runtime_excess_energy_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '5.0',
  })
# ---
# name: test_numbers[de-number.keba_keenergy_12345678_heat_circuit_cooling_curve_offset_2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Heizkreis 2 Kühlkurven-Offset',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 10.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: -10.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.1,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_heat_circuit_cooling_curve_offset_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '-1.5',
  })
# ---
# name: test_numbers[de-number.keba_keenergy_12345678_heat_circuit_cooling_curve_slope_2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Heizkreis 2 Kühlkurven-Steigung',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:slope-uphill',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 5.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.01,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_heat_circuit_cooling_curve_slope_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.6',
  })
# ---
# name: test_numbers[de-number.keba_keenergy_12345678_heat_circuit_cooling_limit_day_2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Heizkreis 2 Kühlgrenze (Tag)',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 100.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: -20.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_heat_circuit_cooling_limit_day_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '20.0',
  })
# ---
# name: test_numbers[de-number.keba_keenergy_12345678_heat_circuit_cooling_limit_night_2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Heizkreis 2 Kühlgrenze (Nacht)',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 40.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: -20.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_heat_circuit_cooling_limit_night_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '18.0',
  })
# ---
# name: test_numbers[de-number.keba_keenergy_12345678_heat_circuit_excess_energy_cooling_limit_day_2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Heizkreis 2 Kühlgrenze (PV-Überschuss, Tag)',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 100.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: -20.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_heat_circuit_excess_energy_cooling_limit_day_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '10.0',
  })
# ---
# name: test_numbers[de-number.keba_keenergy_12345678_heat_circuit_excess_energy_cooling_limit_night_2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Heizkreis 2 Kühlgrenze (PV-Überschuss, Nacht)',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 100.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: -20.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_heat_circuit_excess_energy_cooling_limit_night_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '28.0',
  })
# ---
# name: test_numbers[de-number.keba_keenergy_12345678_heat_circuit_excess_energy_heating_limit_day_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Heizkreis 1 Heizgrenze (PV-Überschuss, Tag)',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 100.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: -20.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_heat_circuit_excess_energy_heating_limit_day_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '30.0',
  })
# ---
# name: test_numbers[de-number.keba_keenergy_12345678_heat_circuit_excess_energy_heating_limit_night_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Heizkreis 1 Heizgrenze (PV-Überschuss, Nacht)',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 100.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: -20.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_heat_circuit_excess_energy_heating_limit_night_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '28.0',
  })
# ---
# name: test_numbers[de-number.keba_keenergy_12345678_heat_circuit_excess_energy_target_cooling_temperature_2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Heizkreis 2 Soll-Raumtemperatur Kühlen (PV-Überschuss)',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:sun-thermometer',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 30.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 10.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_heat_circuit_excess_energy_target_cooling_temperature_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '10.0',
  })
# ---
# name: test_numbers[de-number.keba_keenergy_12345678_heat_circuit_excess_energy_target_cooling_temperature_hysteresis_2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Heizkreis 2 Soll-Raumtemperatur-Hysterese Kühlen (PV-Überschuss)',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer-lines',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 2.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.1,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_heat_circuit_excess_energy_target_cooling_temperature_hysteresis_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.7',
  })
# ---
# name: test_numbers[de-number.keba_keenergy_12345678_heat_circuit_excess_energy_target_temperature_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Heizkreis 1 Soll-Raumtemperatur (PV-Überschuss)',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:sun-thermometer',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 30.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 10.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_heat_circuit_excess_energy_target_temperature_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '30.0',
  })
# ---
# name: test_numbers[de-number.keba_keenergy_12345678_heat_circuit_excess_energy_target_temperature_hysteresis_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Heizkreis 1 Soll-Raumtemperatur-Hysterese (PV-Überschuss)',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer-lines',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 2.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.1,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_heat_circuit_excess_energy_target_temperature_hysteresis_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.7',
  })
# ---
# name: test_numbers[de-number.keba_keenergy_12345678_heat_circuit_heating_curve_offset_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Heizkreis 1 Heizkurven-Offset',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 10.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: -10.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.1,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_heat_circuit_heating_curve_offset_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1.5',
  })
# ---
# name: test_numbers[de-number.keba_keenergy_12345678_heat_circuit_heating_curve_slope_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Heizkreis 1 Heizkurven-Steigung',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:slope-uphill',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 5.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.01,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_heat_circuit_heating_curve_slope_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.5',
  })
# ---
# name: test_numbers[de-number.keba_keenergy_12345678_heat_circuit_heating_limit_day_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Heizkreis 1 Heizgrenze (Tag)',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 100.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: -20.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_heat_circuit_heating_limit_day_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '20.0',
  })
# ---
# name: test_numbers[de-number.keba_keenergy_12345678_heat_circuit_heating_limit_night_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Heizkreis 1 Heizgrenze (Nacht)',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 100.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: -20.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_heat_circuit_heating_limit_night_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '18.0',
  })
# ---
# name: test_numbers[de-number.keba_keenergy_12345678_heat_circuit_target_cooling_temperature_day_2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Heizkreis 2 Soll-Raumtemperatur Kühlen (Tag)',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 30.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 10.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_heat_circuit_target_cooling_temperature_day_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '20.5',
  })
# ---
# name: test_numbers[de-number.keba_keenergy_12345678_heat_circuit_target_cooling_temperature_night_2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Heizkreis 2 Soll-Raumtemperatur Kühlen (Nacht)',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 30.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 10.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_heat_circuit_target_cooling_temperature_night_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '20.0',
  })
# ---
# name: test_numbers[de-number.keba_keenergy_12345678_heat_circuit_target_temperature_away_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Heizkreis 1 Soll-Raumtemperatur (Urlaub)',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 30.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 10.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_heat_circuit_target_temperature_away_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '18.0',
  })
# ---
# name: test_numbers[de-number.keba_keenergy_12345678_heat_circuit_target_temperature_day_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Heizkreis 1 Soll-Raumtemperatur (Tag)',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 30.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 10.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_heat_circuit_target_temperature_day_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '20.5',
  })
# ---
# name: test_numbers[de-number.keba_keenergy_12345678_heat_circuit_target_temperature_night_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Heizkreis 1 Soll-Raumtemperatur (Nacht)',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 30.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 10.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_heat_circuit_target_temperature_night_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '20.0',
  })
# ---
# name: test_numbers[de-number.keba_keenergy_12345678_heat_circuit_target_temperature_offset_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Heizkreis 1 Soll-Raumtemperatur (Offset)',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 2.5,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: -2.5,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_heat_circuit_target_temperature_offset_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1.5',
  })
# ---
# name: test_numbers[de-number.keba_keenergy_12345678_heat_circuit_target_temperature_offset_2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Heizkreis 2 Soll-Raumtemperatur (Offset)',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 2.5,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: -2.5,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_heat_circuit_target_temperature_offset_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_numbers[de-number.keba_keenergy_12345678_heat_pump_compressor_night_speed]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'speed',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Wärmepumpe Kompressordrehzahl (Nacht)',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 100.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 50.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '%',
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_heat_pump_compressor_night_speed',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '50.0',
  })
# ---
# name: test_numbers[de-number.keba_keenergy_12345678_hot_water_tank_excess_energy_target_temperature_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Warmwasserspeicher 1 Soll-Temperatur (PV-Überschuss)',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:sun-thermometer',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 95.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_hot_water_tank_excess_energy_target_temperature_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '75.0',
  })
# ---
# name: test_numbers[de-number.keba_keenergy_12345678_hot_water_tank_excess_energy_target_temperature_2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Warmwasserspeicher 2 Soll-Temperatur (PV-Überschuss)',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:sun-thermometer',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 95.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_hot_water_tank_excess_energy_target_temperature_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '75.0',
  })
# ---
# name: test_numbers[de-number.keba_keenergy_12345678_hot_water_tank_excess_energy_target_temperature_hysteresis_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Warmwasserspeicher 1 Soll-Temperatur-Hysterese (PV-Überschuss)',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer-lines',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 5.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.1,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_hot_water_tank_excess_energy_target_temperature_hysteresis_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '4.0',
  })
# ---
# name: test_numbers[de-number.keba_keenergy_12345678_hot_water_tank_excess_energy_target_temperature_hysteresis_2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Warmwasserspeicher 2 Soll-Temperatur-Hysterese (PV-Überschuss)',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer-lines',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 5.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.1,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_hot_water_tank_excess_energy_target_temperature_hysteresis_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '4.0',
  })
# ---
# name: test_numbers[de-number.keba_keenergy_12345678_hot_water_tank_standby_temperature_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Warmwasserspeicher 1 Stütztemperatur',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer-chevron-down',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 52.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_hot_water_tank_standby_temperature_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '32.5',
  })
# ---
# name: test_numbers[de-number.keba_keenergy_12345678_hot_water_tank_standby_temperature_2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Warmwasserspeicher 2 Stütztemperatur',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer-chevron-down',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 52.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_hot_water_tank_standby_temperature_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '32.5',
  })
# ---
# name: test_numbers[de-number.keba_keenergy_12345678_hot_water_tank_target_temperature_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Warmwasserspeicher 1 Soll-Temperatur',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer-chevron-up',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 52.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_hot_water_tank_target_temperature_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '51.0',
  })
# ---
# name: test_numbers[de-number.keba_keenergy_12345678_hot_water_tank_target_temperature_2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Warmwasserspeicher 2 Soll-Temperatur',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer-chevron-up',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 52.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_hot_water_tank_target_temperature_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '51.0',
  })
# ---
# name: test_numbers[de-number.keba_keenergy_12345678_solar_circuit_target_temperature_1_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Solarkreis 1 Soll-Temperatur 1',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer-water',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 90.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_solar_circuit_target_temperature_1_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '55.0',
  })
# ---
# name: test_numbers[de-number.keba_keenergy_12345678_solar_circuit_target_temperature_1_2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Solarkreis 2 Soll-Temperatur 1',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer-water',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 90.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_solar_circuit_target_temperature_1_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '53.0',
  })
# ---
# name: test_numbers[de-number.keba_keenergy_12345678_solar_circuit_target_temperature_2_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Solarkreis 1 Soll-Temperatur 2',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer-water',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 90.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_solar_circuit_target_temperature_2_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '54.0',
  })
# ---
# name: test_numbers[de-number.keba_keenergy_12345678_solar_circuit_target_temperature_2_2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Solarkreis 2 Soll-Temperatur 2',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer-water',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 90.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_solar_circuit_target_temperature_2_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '52.0',
  })
# ---
# name: test_numbers[en-number.keba_keenergy_12345678_buffer_tank_excess_energy_target_temperature_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Buffer tank 1 Target temperature (PV surplus)',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:sun-thermometer',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 95.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_buffer_tank_excess_energy_target_temperature_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '75.0',
  })
# ---
# name: test_numbers[en-number.keba_keenergy_12345678_buffer_tank_excess_energy_target_temperature_2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Buffer tank 2 Target temperature (PV surplus)',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:sun-thermometer',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 95.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_buffer_tank_excess_energy_target_temperature_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '75.0',
  })
# ---
# name: test_numbers[en-number.keba_keenergy_12345678_buffer_tank_excess_energy_target_temperature_hysteresis_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Buffer tank 1 Target temperature hysteresis (PV surplus)',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer-lines',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 5.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.1,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_buffer_tank_excess_energy_target_temperature_hysteresis_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2.0',
  })
# ---
# name: test_numbers[en-number.keba_keenergy_12345678_buffer_tank_excess_energy_target_temperature_hysteresis_2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Buffer tank 2 Target temperature hysteresis (PV surplus)',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer-lines',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 5.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.1,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_buffer_tank_excess_energy_target_temperature_hysteresis_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '2.0',
  })
# ---
# name: test_numbers[en-number.keba_keenergy_12345678_buffer_tank_outdoor_temperature_excess_energy_limit_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Buffer tank 1 Outdoor temperature limit (PV surplus)',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 50.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_buffer_tank_outdoor_temperature_excess_energy_limit_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '25.0',
  })
# ---
# name: test_numbers[en-number.keba_keenergy_12345678_buffer_tank_outdoor_temperature_excess_energy_limit_2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Buffer tank 2 Outdoor temperature limit (PV surplus)',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 50.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_buffer_tank_outdoor_temperature_excess_energy_limit_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '25.0',
  })
# ---
# name: test_numbers[en-number.keba_keenergy_12345678_buffer_tank_standby_temperature_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Buffer tank 1 Standby temperature',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer-chevron-down',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 90.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_buffer_tank_standby_temperature_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '10.0',
  })
# ---
# name: test_numbers[en-number.keba_keenergy_12345678_buffer_tank_standby_temperature_2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Buffer tank 2 Standby temperature',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer-chevron-down',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 90.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_buffer_tank_standby_temperature_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '11.0',
  })
# ---
# name: test_numbers[en-number.keba_keenergy_12345678_external_heat_source_min_runtime_excess_energy_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'duration',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'External heat source 1 Minimum runtime (PV surplus)',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 10800.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTime.MINUTES: 'min'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_external_heat_source_min_runtime_excess_energy_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '5.0',
  })
# ---
# name: test_numbers[en-number.keba_keenergy_12345678_external_heat_source_min_runtime_excess_energy_2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'duration',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'External heat source 2 Minimum runtime (PV surplus)',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 10800.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTime.MINUTES: 'min'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_external_heat_source_min_runtime_excess_energy_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '5.0',
  })
# ---
# name: test_numbers[en-number.keba_keenergy_12345678_heat_circuit_cooling_curve_offset_2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Heating circuit 2 Cooling curve offset',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 10.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: -10.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.1,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_heat_circuit_cooling_curve_offset_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '-1.5',
  })
# ---
# name: test_numbers[en-number.keba_keenergy_12345678_heat_circuit_cooling_curve_slope_2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Heating circuit 2 Cooling curve slope',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:slope-uphill',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 5.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.01,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_heat_circuit_cooling_curve_slope_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.6',
  })
# ---
# name: test_numbers[en-number.keba_keenergy_12345678_heat_circuit_cooling_limit_day_2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Heating circuit 2 Cooling limit (day)',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 100.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: -20.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_heat_circuit_cooling_limit_day_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '20.0',
  })
# ---
# name: test_numbers[en-number.keba_keenergy_12345678_heat_circuit_cooling_limit_night_2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Heating circuit 2 Cooling limit (night)',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 40.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: -20.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_heat_circuit_cooling_limit_night_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '18.0',
  })
# ---
# name: test_numbers[en-number.keba_keenergy_12345678_heat_circuit_excess_energy_cooling_limit_day_2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Heating circuit 2 Cooling limit (PV surplus, day)',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 100.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: -20.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_heat_circuit_excess_energy_cooling_limit_day_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '10.0',
  })
# ---
# name: test_numbers[en-number.keba_keenergy_12345678_heat_circuit_excess_energy_cooling_limit_night_2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Heating circuit 2 Cooling limit (PV surplus, night)',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 100.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: -20.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_heat_circuit_excess_energy_cooling_limit_night_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '28.0',
  })
# ---
# name: test_numbers[en-number.keba_keenergy_12345678_heat_circuit_excess_energy_heating_limit_day_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Heating circuit 1 Heating limit (PV surplus, day)',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 100.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: -20.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_heat_circuit_excess_energy_heating_limit_day_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '30.0',
  })
# ---
# name: test_numbers[en-number.keba_keenergy_12345678_heat_circuit_excess_energy_heating_limit_night_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Heating circuit 1 Heating limit (PV surplus, night)',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 100.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: -20.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_heat_circuit_excess_energy_heating_limit_night_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '28.0',
  })
# ---
# name: test_numbers[en-number.keba_keenergy_12345678_heat_circuit_excess_energy_target_cooling_temperature_2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Heating circuit 2 Target room cooling temperature (PV surplus)',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:sun-thermometer',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 30.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 10.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_heat_circuit_excess_energy_target_cooling_temperature_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '10.0',
  })
# ---
# name: test_numbers[en-number.keba_keenergy_12345678_heat_circuit_excess_energy_target_cooling_temperature_hysteresis_2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Heating circuit 2 Target room cooling temperature hysteresis (PV surplus)',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer-lines',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 2.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.1,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_heat_circuit_excess_energy_target_cooling_temperature_hysteresis_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.7',
  })
# ---
# name: test_numbers[en-number.keba_keenergy_12345678_heat_circuit_excess_energy_target_temperature_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Heating circuit 1 Target room temperature (PV surplus)',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:sun-thermometer',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 30.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 10.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_heat_circuit_excess_energy_target_temperature_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '30.0',
  })
# ---
# name: test_numbers[en-number.keba_keenergy_12345678_heat_circuit_excess_energy_target_temperature_hysteresis_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Heating circuit 1 Target room temperature hysteresis (PV surplus)',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer-lines',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 2.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.1,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_heat_circuit_excess_energy_target_temperature_hysteresis_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.7',
  })
# ---
# name: test_numbers[en-number.keba_keenergy_12345678_heat_circuit_heating_curve_offset_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Heating circuit 1 Heating curve offset',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 10.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: -10.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.1,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_heat_circuit_heating_curve_offset_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1.5',
  })
# ---
# name: test_numbers[en-number.keba_keenergy_12345678_heat_circuit_heating_curve_slope_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Heating circuit 1 Heating curve slope',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:slope-uphill',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 5.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.01,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_heat_circuit_heating_curve_slope_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.5',
  })
# ---
# name: test_numbers[en-number.keba_keenergy_12345678_heat_circuit_heating_limit_day_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Heating circuit 1 Heating limit (day)',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 100.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: -20.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_heat_circuit_heating_limit_day_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '20.0',
  })
# ---
# name: test_numbers[en-number.keba_keenergy_12345678_heat_circuit_heating_limit_night_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Heating circuit 1 Heating limit (night)',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 100.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: -20.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_heat_circuit_heating_limit_night_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '18.0',
  })
# ---
# name: test_numbers[en-number.keba_keenergy_12345678_heat_circuit_target_cooling_temperature_day_2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Heating circuit 2 Target room cooling temperature (day)',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 30.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 10.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_heat_circuit_target_cooling_temperature_day_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '20.5',
  })
# ---
# name: test_numbers[en-number.keba_keenergy_12345678_heat_circuit_target_cooling_temperature_night_2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Heating circuit 2 Target room cooling temperature (night)',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 30.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 10.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_heat_circuit_target_cooling_temperature_night_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '20.0',
  })
# ---
# name: test_numbers[en-number.keba_keenergy_12345678_heat_circuit_target_temperature_away_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Heating circuit 1 Target room temperature (away)',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 30.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 10.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_heat_circuit_target_temperature_away_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '18.0',
  })
# ---
# name: test_numbers[en-number.keba_keenergy_12345678_heat_circuit_target_temperature_day_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Heating circuit 1 Target room temperature (day)',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 30.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 10.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_heat_circuit_target_temperature_day_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '20.5',
  })
# ---
# name: test_numbers[en-number.keba_keenergy_12345678_heat_circuit_target_temperature_night_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Heating circuit 1 Target room temperature (night)',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 30.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 10.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_heat_circuit_target_temperature_night_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '20.0',
  })
# ---
# name: test_numbers[en-number.keba_keenergy_12345678_heat_circuit_target_temperature_offset_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Heating circuit 1 Target room temperature (offset)',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 2.5,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: -2.5,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_heat_circuit_target_temperature_offset_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '1.5',
  })
# ---
# name: test_numbers[en-number.keba_keenergy_12345678_heat_circuit_target_temperature_offset_2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Heating circuit 2 Target room temperature (offset)',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 2.5,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: -2.5,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_heat_circuit_target_temperature_offset_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '0.0',
  })
# ---
# name: test_numbers[en-number.keba_keenergy_12345678_heat_pump_compressor_night_speed]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'speed',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Heat pump Compressor speed (night)',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 100.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 50.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 1,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: '%',
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_heat_pump_compressor_night_speed',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '50.0',
  })
# ---
# name: test_numbers[en-number.keba_keenergy_12345678_hot_water_tank_excess_energy_target_temperature_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Hot water tank 1 Target temperature (PV surplus)',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:sun-thermometer',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 95.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_hot_water_tank_excess_energy_target_temperature_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '75.0',
  })
# ---
# name: test_numbers[en-number.keba_keenergy_12345678_hot_water_tank_excess_energy_target_temperature_2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Hot water tank 2 Target temperature (PV surplus)',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:sun-thermometer',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 95.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_hot_water_tank_excess_energy_target_temperature_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '75.0',
  })
# ---
# name: test_numbers[en-number.keba_keenergy_12345678_hot_water_tank_excess_energy_target_temperature_hysteresis_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Hot water tank 1 Target temperature hysteresis (PV surplus)',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer-lines',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 5.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.1,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_hot_water_tank_excess_energy_target_temperature_hysteresis_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '4.0',
  })
# ---
# name: test_numbers[en-number.keba_keenergy_12345678_hot_water_tank_excess_energy_target_temperature_hysteresis_2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Hot water tank 2 Target temperature hysteresis (PV surplus)',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer-lines',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 5.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.1,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_hot_water_tank_excess_energy_target_temperature_hysteresis_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '4.0',
  })
# ---
# name: test_numbers[en-number.keba_keenergy_12345678_hot_water_tank_standby_temperature_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Hot water tank 1 Standby temperature',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer-chevron-down',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 52.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_hot_water_tank_standby_temperature_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '32.5',
  })
# ---
# name: test_numbers[en-number.keba_keenergy_12345678_hot_water_tank_standby_temperature_2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Hot water tank 2 Standby temperature',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer-chevron-down',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 52.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_hot_water_tank_standby_temperature_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '32.5',
  })
# ---
# name: test_numbers[en-number.keba_keenergy_12345678_hot_water_tank_target_temperature_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Hot water tank 1 Target temperature',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer-chevron-up',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 52.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_hot_water_tank_target_temperature_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '51.0',
  })
# ---
# name: test_numbers[en-number.keba_keenergy_12345678_hot_water_tank_target_temperature_2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Hot water tank 2 Target temperature',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer-chevron-up',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 52.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_hot_water_tank_target_temperature_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '51.0',
  })
# ---
# name: test_numbers[en-number.keba_keenergy_12345678_solar_circuit_target_temperature_1_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Solar circuit 1 Target temperature 1',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer-water',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 90.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_solar_circuit_target_temperature_1_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '55.0',
  })
# ---
# name: test_numbers[en-number.keba_keenergy_12345678_solar_circuit_target_temperature_1_2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Solar circuit 2 Target temperature 1',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer-water',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 90.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_solar_circuit_target_temperature_1_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '53.0',
  })
# ---
# name: test_numbers[en-number.keba_keenergy_12345678_solar_circuit_target_temperature_2_1]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Solar circuit 1 Target temperature 2',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer-water',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 90.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_solar_circuit_target_temperature_2_1',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '54.0',
  })
# ---
# name: test_numbers[en-number.keba_keenergy_12345678_solar_circuit_target_temperature_2_2]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'temperature',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'Solar circuit 2 Target temperature 2',
      <EntityStateAttribute.ICON: 'icon'>: 'mdi:thermometer-water',
      <NumberEntityCapabilityAttribute.MAX: 'max'>: 90.0,
      <NumberEntityCapabilityAttribute.MIN: 'min'>: 0.0,
      <NumberEntityCapabilityAttribute.MODE: 'mode'>: <NumberMode.AUTO: 'auto'>,
      <NumberEntityCapabilityAttribute.STEP: 'step'>: 0.5,
      <EntityStateAttribute.UNIT_OF_MEASUREMENT: 'unit_of_measurement'>: <UnitOfTemperature.CELSIUS: '°C'>,
    }),
    'context': <ANY>,
    'entity_id': 'number.keba_keenergy_12345678_solar_circuit_target_temperature_2_2',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': '52.0',
  })
# ---
